docs: refresh all AGENTS.md files with verified facts and coherent delegation structure
- Root AGENTS.md: authoritative reference with corrected DTO conventions
  (Lombok @Data/@SuperBuilder, not Java records), accurate type bounds
  (BaseReqDTO/BaseResDTO), expanded project file tree, ExecuteTraceAspect
  explanation, Spring Boot JVM args, and module-specific AGENTS.md links.
- app/AGENTS.md: simplified to delegation + commands + POM quirks;
  removed duplicated architecture/DT0/testing/style sections.
- app/common/AGENTS.md: fixed dependency list to match actual POM
  (spring-boot-starter-webflux, spring-boot-starter-aspectj,
  springdoc-openapi-starter-webflux-ui).
- app/uam/AGENTS.md: added scanBasePackages='com.anasdidi' note
  explaining why common aspects are picked up.